--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:             WELCOME!
 email:             younos.nazarian@gmail.com
 description:       Younos Nazarian, Network Expert&Trainer
 author:            Younos Nazarian
-baseurl:           "/JJ"
-url:               "http://younosnazarian.github.io"
+baseurl:           ""
+url:               "http://kryptomesh.com"
 
 # Social Profiles
 twitter_username:  Younos
